test_suite/tests/ui/validate/validator_unimplemented.stderr
error[E0277]: the trait bound `ValidatorStruct: Validate` is not satisfied
 --> tests/ui/validate/validator_unimplemented.rs:3:10
  |
3 | #[derive(Deserialize)]
  |          ^^^^^^^^^^^ the trait `Validate` is not implemented for `ValidatorStruct`
  |
  = help: the following other types implement trait `Validate`:
            &BTreeMap<K, V>
            &HashMap<K, V, S>
            &T
            BTreeSet<T>
            BinaryHeap<T>
            HashSet<T>
            LinkedList<T>
            Vec<T>
          and $N others
  = note: this error originates in the derive macro `Deserialize` (in Nightly builds, run with -Z macro-backtrace for more info)
